<resources>
    <string name="app_name">Torwelten Editor</string>
    <string name="phy">PHY</string>
    <string name="men">MEN</string>
    <string name="soz">SOZ</string>
    <string name="nk">NK</string>
    <string name="fk">FK</string>
    <string name="lp">LP</string>
    <string name="ep">EP</string>
    <string name="mp">MP</string>
    <string name="install_title">Datenbank wird eingerichtet…</string>
    <string name="menu_cs">Charakterauswahl</string>
    <string name="charselect_title">Charakterauswahl</string>
    <string name="charselect_name">Charaktername</string>
    <string name="charselect_xp">XP: %1$d/%2$d</string>
    <string name="dialog_del_char_title">%1$s löschen …</string>
    <string name="dialog_del_char_del">Löschen</string>
    <string name="dialog_del_char_warn">Dies entfernt den Charakter endgültig aus der Datenbank.
        \nDiese Aktion kann nicht rückgängig gemacht werden!
    </string>
    <string name="dialog_del_char_text">Der Charakter wird als gelöscht markiert.
        \nDurch ein vorangestelltes \'#\' bei der Suche, lassen sich gelöschte Charaktere
        wiederfinden.
    </string>
    <string name="dialog_edit_attrib_title">Attribut ändern …</string>
    <string name="dialog_edit_attrib_xp">XP: </string>
    <string name="dialog_edit_skill_lvl0">gefährliches Halbwissen</string>
    <string name="dialog_edit_skill_lvl1">ordentliche Grundkenntnisse</string>
    <string name="dialog_edit_skill_lvl2">umfassender Erfahrungensschatz</string>
    <string name="dialog_edit_skill_lvl3">profundes Expertenwissen</string>
    <string name="dialog_edit_skill_del">entfernen …</string>
    <string name="dialog_new_skill_title">Neue Fertigkeit:</string>
    <string name="dialog_new_skill_base">Grundfertigkeit</string>
    <string name="dialog_new_skill_skill">Fertigkeit in %1$s</string>
    <string name="dialog_new_skill_spec">Spezialisierung von %1$s</string>
    <string name="dialog_new_skill_sel">&lt;&lt;%1$s;&gt;&gt;</string>
    <string name="dialog_skill_filter_title">Fertigkeiten filtern</string>
    <string name="dialog_skill_filter_base">Grundfertigkeiten</string>
    <string name="dialog_skill_filter_skill">Fertigkeiten</string>
    <string name="dialog_skill_filter_spec">Spezialisierungen</string>
    <string name="dialog_skill_filter_active">Aktive Fertigkeiten</string>
    <string name="dialog_skill_filter_passive">Passive Fertigkeiten</string>
    <string name="dialog_edit_info_title">%1$s bearbeiten…</string>
    <string name="dialog_item_sell_title">%1$dx %2$s verkaufen…</string>
    <string name="dialog_item_sell_info">Stückpreis</string>
    <string name="dialog_item_cont_title">Behältereigenschaften</string>
    <string name="dialog_item_cont_capacity">Kapazität</string>
    <string name="dialog_item_cont_gram">g / cm³</string>
    <string name="dialog_item_cont_kgram">kg / Liter</string>
    <string name="dialog_item_cont_name">Bezeichnung</string>
    <string name="dialog_item_cont_name_hint">(z.B. Hosentasche)</string>
    <string name="dialog_item_cont_cap_hint">So viel passt rein</string>
    <string name="dialog_item_qty_title">Menge bearbeiten:</string>
    <string name="dialog_item_qty_amount">Anzahl</string>
    <string name="dialog_item_qty_buy">kaufen</string>
    <string name="dialog_item_qty_take">nehmen</string>
    <string name="dialog_item_qty_split">abteilen</string>
    <string name="dialog_item_qty_part">aufteilen</string>
    <string name="dialog_item_qty_join">vereinen</string>
    <string name="dialog_item_qty_all">Alle</string>
    <string name="dialog_item_color_title">Farbe festlegen</string>
    <string name="dialog_item_material_title">Material:</string>
    <string name="dialog_item_pack_title">%1$s einpacken:</string>
    <string name="dialog_item_qual_title">Qualität ändern:</string>
    <string name="dialog_item_qual_inc">verbessern / reparieren</string>
    <string name="dialog_item_qual_dec">verschlechtern / beschädigen</string>
    <string name="dialog_item_dmg_title">Schadenswerte: </string>
    <string name="dialog_item_dmg_code">Schadenscode: </string>
    <string name="dialog_item_dmg_mod">modifiziert einen anderen Schaden.</string>
    <string name="dialog_item_skill">Fertigkeit wählen</string>
    <string name="dialog_item_skill_none">ungeübt</string>
    <string name="dialog_effect_title">Effektwurf …</string>
    <string name="dialog_effect">Effekt:</string>
    <string name="dialog_item_attack_title">Attacke …</string>
    <string name="dialog_item_attack_modifier">Modifikator</string>
    <string name="dialog_remove_trait_title">Eigenschaft löschen …</string>
    <string name="dialog_remove_trait_msg">Entfernt %1$s und korrigiert die Erfahrungspunkte.</string>
    <string name="dialog_collapse_trait_title">Varianten bearbeiten …</string>
    <string name="dialog_collapse_trait_msg">Fügt die gewählten Varianten dem bearbeitbaren Text hinzu.</string>
    <string name="dialog_dmg_lp_inc">Schaden</string>
    <string name="dialog_dmg_lp_dec">Heilung</string>
    <string name="dialog_dmg_ep_inc">Erschöpfung</string>
    <string name="dialog_dmg_ep_dec">Erholung</string>
    <string name="dialog_dmg_mp_inc">Furcht</string>
    <string name="dialog_dmg_mp_dec">Beruhigung</string>
    <string name="dialog_dmg_roll">Würfeln</string>
    <string name="dialog_dmg_hint">Wert</string>
    <string name="dialog_invset_title">Einstellungen</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Abbrechen</string>
    <string name="search">🔍</string>
    <string name="add">+</string>
    <string name="skillselect_name">Fertigkeit</string>
    <string name="skillselect_title">Fertigkeiten aktivieren/entfernen …</string>
    <string name="skillselect_filter">Filter</string>
    <string name="cv_skills">Fertigkeiten</string>
    <string name="cv_info">Hintergrund</string>
    <string name="cv_traits">Eigenschaften</string>
    <string name="cv_inv">Inventar</string>
    <string name="cv_del">Der Charakter ist als gelöscht markiert! \nTippe diesen Text lange an,
        um den Charakter wiederherzustellen.
    </string>
    <string name="cv_xp">XP: %1$d / %2$d</string>
    <string name="ts_title">Eigenschaft wählen</string>
    <string name="ts_advantages">Vorteile</string>
    <string name="ts_disadvantages">Nachteile</string>
    <string name="ts_all">Alle</string>
    <string name="ts_groups">Gruppen</string>
    <string name="ts_add_trait">Eigenschaft hinzufügen</string>
    <string name="te_name">Eigenschaft</string>
    <string name="te_rank">Rang</string>
    <string name="te_xp">XP</string>
    <string name="te_removed">%1$s gelöscht</string>
    <string name="tv_rank"> (%1$d) </string>
    <string name="ci_core_title">Kerninfos</string>
    <string name="ci_desc_title">Aussehen</string>
    <string name="ci_name">Name</string>
    <string name="ci_concept">Konzept</string>
    <string name="ci_homeworld">Heimatwelt</string>
    <string name="ci_culture">Kultur</string>
    <string name="ci_species">Spezies</string>
    <string name="ci_notes">Notizen</string>
    <string name="ci_age">Alter</string>
    <string name="ci_sex">Geschlecht</string>
    <string name="ci_size">Größe</string>
    <string name="ci_weight">Gewicht</string>
    <string name="ci_build">Körperbau</string>
    <string name="ci_eye_color">Augenfarbe</string>
    <string name="ci_color1">Haut/Schuppen/Pelz</string>
    <string name="ci_color2">Frisur/Muster/Kamm</string>
    <string name="ci_desc">Beschreibung</string>
    <string name="ci_new">Neu</string>
    <string name="ci_new_title">Seite erstellen oder löschen…</string>
    <string name="ci_new_info">Hier kannst du weitere Informationsseiten für deinen Charakter
        anlegen. Erstelle die gewünschte Anzahl an Feldern, gib der Gruppe und den Feldern die
        passenden Namen und wähle \'Erstellen\'.\nUm eine bestehende Gruppe zu Löschen, gib den
        Namen ein und wähle dann \'Löschen\'. Die beiden Seiten mit den Basisinformationen können
        nicht gelöscht werden.
    </string>
    <string name="ci_new_name">Name der Gruppe</string>
    <string name="ci_new_field">Feldname</string>
    <string name="ci_new_add_field">Neues Feld</string>
    <string name="ci_new_save">Speichern</string>
    <string name="ci_new_delete">Löschen</string>
    <string name="ci_new_success_create">%1$s erfolgreich angelegt.</string>
    <string name="ci_new_success_delete">%1$s wurde gelöscht.</string>
    <string name="ci_new_error_noname">Fehler: Ein Gruppenname muss angegeben werden.</string>
    <string name="ci_new_error_nofields">Fehler: Eine Gruppe ohne Felder kann nicht erstellt werden.</string>
    <string name="ci_new_error_exists">Fehler: Gruppe existiert bereits.</string>
    <string name="ci_new_error_core">Fehler: Diese Gruppe kann nicht gelöscht werden.</string>
    <string name="cinv_name">Bezeichnung: </string>
    <string name="cinv_equipped">Ausgerüstete</string>
    <string name="cinv_all">Alle</string>
    <string name="cinv_desc">Beschreibung: </string>
    <string name="cinv_show_content">Inhalt anzeigen</string>
    <string name="cinv_equip">ausrüsten</string>
    <string name="cinv_pack">einpacken</string>
    <string name="cinv_unpack">auspacken</string>
    <string name="cinv_drop">ablegen</string>
    <string name="cinv_expend">verbrauchen</string>
    <string name="cinv_buy">kaufen</string>
    <string name="cinv_bought">%1$dx %2$s gekauft</string>
    <string name="cinv_sold">%1$dx %2$s verkauft</string>
    <string name="cinv_take">nehmen</string>
    <string name="cinv_quality">Qualität:</string>
    <string name="cinv_quantity">Menge:</string>
    <string name="cinv_price">Preis:</string>
    <string name="cinv_damage">Schaden</string>
    <string name="cinv_color">Farbe</string>
    <string name="cinv_material">Material</string>
    <string name="cinv_cash">Barvermögen %1$.2f IR</string>
    <string name="cinv_money">%1$.2f IR</string>
    <string name="cinv_weight">Gewicht:</string>
    <string name="cinv_weight_limit">Kapazität:</string>
    <string name="cinv_capacity">Kapazität</string>
    <string name="cinv_cal_caliber">Kaliber</string>
    <string name="cinv_cal_weapontype">Waffentyp</string>
    <string name="cinv_cal_light">leicht</string>
    <string name="cinv_cal_medium">mittel</string>
    <string name="cinv_cal_heavy">schwer</string>
    <string name="cinv_cal_pistol">Faustfeuerwaffen</string>
    <string name="cinv_cal_rifle">Langwaffen</string>
    <string name="cinv_cal_shotgun">Schrotflinten</string>
    <string name="cinv_cal_energy">Energiewaffen</string>
    <string name="cinv_cls">Klasse: </string>
    <string name="cinv_cls_clothing">Kleidungsstück</string>
    <string name="cinv_cls_container">Behälter</string>
    <string name="cinv_cls_tool">Werkzeug</string>
    <string name="cinv_cls_weapon_melee">Nahkampfwaffe</string>
    <string name="cinv_cls_weapon_ranged">Fernkampfwaffe</string>
    <string name="cinv_cls_clipsnmore">Waffenzubehör</string>
    <string name="cinv_cls_ammo">Munition</string>
    <string name="cinv_cls_implant">Implantat</string>
    <string name="cinv_cls_valuable">Wertgegenstand</string>
    <string name="cinv_cls_generic">Gegenstand</string>
    <string name="cinv_equipped_clothing">getragene Kleidung</string>
    <string name="cinv_equipped_weapons">gezogene Waffen</string>
    <string-array name="cinv_qualities">
        <item>zerstört</item>
        <item>kaputt</item>
        <item>beschädigt</item>
        <item>sehr schlecht</item>
        <item>schlecht</item>
        <item>gebraucht</item>
        <item>normal</item>
        <item>gut</item>
        <item>sehr gut</item>
        <item>überragend</item>
        <item>herausragend</item>
        <item>erstaunlich</item>
        <item>unvorstellbar</item>
    </string-array>
    <string name="setting_core_initial_xp">Start-XP:</string>
</resources>