<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/dsf_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_skill_filter_base"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/dsf_skil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_skill_filter_skill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dsf_base" />

    <CheckBox
        android:id="@+id/dsf_spec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_skill_filter_spec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dsf_skil" />

    <CheckBox
        android:id="@+id/dsf_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_skill_filter_active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dsf_spec" />

    <CheckBox
        android:id="@+id/dsf_pas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_skill_filter_passive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dsf_act" />

</androidx.constraintlayout.widget.ConstraintLayout>