<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cin_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ci_new_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cin_grp_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ci_new_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cin_title" />

    <Button
        android:id="@+id/cin_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ci_new_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cin_add_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ci_new_add_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cin_add_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cin_grp_name">
        <LinearLayout
            android:id="@+id/cin_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cin_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ci_new_info" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/cin_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ci_new_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cin_save" />

</androidx.constraintlayout.widget.ConstraintLayout>